# nlmpy

./: CITATION.cff  CITATION.txt  LICENSE.txt  README.md  pyproject.toml  setup.cfg  setup.py
nlmpy/: nlmpy.py
nlmpy.egg-info/: PKG-INFO  SOURCES.txt
src/nlmpy/: __init__.py  nlmpy.py  nlmpyNetwork.py
src/nlmpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
