[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nlmpy"
version = "1.1.2"
authors = [
  { name="Thomas R. Etherington", email="etheringtont@landcareresearch.co.nz" },
  { name="E. Penelope Holland" },
  { name="David O'Sullivan" },
  { name="Pierre Vigier" }
]
description = "A Python package to create neutral landscape models"
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tretherington/nlmpy"
