[metadata]
name = nlmpy
version = 1.1.0
author = Thomas R. Etherington, E. Penelope Holland, David O'Sullivan, Pierre Vigier
author_email = etheringtont@landcareresearch.co.nz
description = A Python package to create neutral landscape models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tretherington/nlmpy
project_urls =
    Bug Tracker = https://github.com/tretherington/nlmpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3

[options.packages.find]
where = src